--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -35,28 +35,51 @@
   <!-- This is the main body  -->
   <section id="hero">
     <div id ="hero-copy">
-      <h1>Jojo</h1>
+      <h1>LaCroix Jojo</h1>
+      <h4>Flavors inspired by JJBA</h4>
+        <div class="button">
+          Buy Now
+      </div>
+    </div> 
   </section>
 
-     <div class="container">
+  <section>
+    <main class="flex-grid-main">
+      <section class="col-main">
+        <article>
+          <img src="img/Josuke.png">
+          <h2><strong>Two Great Tastes that Taste Great Together</strong></h2>
+          <p>Local teen Josuke Higashikata investigates a string of murders and discovers
+            the killer. Previously Josuke was somewhat of a delinquent, often getting into
+            small money making schemes and pranks. He soon learned that he had a unique power
+            called a "stand" and that there were other people like him in the town, including
+            his nephew Jotaro, classmates Koichi and Okuyasu, and the snarky famous mangaka Rohan.
+          </p>
+        <br>
+  </section>
+
+<section>
+  <div class="container">
        <div class="jotaro">
-         <h1>Title</h1>
-           <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
-           Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
-           pork prosciutto short ribs ham hock burgdoggen flank chuck.
+         <h1>Jotaro</h1>
+           <p>Josuke met his nephew under strange circumstances... His father was having an
+             affair with a Japanese woman several decades younger than him, thus the 12 year age-gap
+             between Josuke and his nephew Jotaro. Jotaro is a stoic man who is studying to earn his
+             PhD in marine biology.
          </p>
         </div>
 
        <div class="Oku">
-         <h1>Title</h1>
-         <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
-         Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
-         pork prosciutto short ribs ham hock burgdoggen flank chuck.
+         <h1>Okuyasu</h1>
+         <p>Okuyasu is a young delinquent boy with a tragic past. He lost his older brother
+           and lives with his physically incapacitated father in a dilapidated, abandoned house
+           in town. In spite of his difficult life, Oku is a deeply affectionate and trusting person.
+           He's Josuke's best friend and right-hand man.
        </p>
        </div>
 
        <div class="Koichi">
-         <h1>Title</h1>
+         <h1>Koichi</h1>
          <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
          Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
          pork prosciutto short ribs ham hock burgdoggen flank chuck.
@@ -64,6 +87,11 @@
        </div>
 
        <div class="Rohan">
+         <h1>Rohan</h1>
+         <p>Rohan is a local comic book artist and writer (a mangaka). He's sort of a shit
+           but he helps Josuke and the crew track down the killer and solve the mystery with
+           his intelligence and keen observational skills.
+        </p>
        </div>
 
     </section>
