--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -40,23 +40,21 @@
         <div class="button">
           Buy Now
       </div>
-    </div> 
+    </div>
+  </section>
+<!-- This is the image on the left -->
+  <section class="flex-sct-1">
+      <img src="img/Josuke.png" class="flex-sct-1-img">
+    <div class="flex-sct-1-text">
+      <p>Local teen Josuke Higashikata investigates a string of murders and discovers the killer.
+        Previously Josuke was somewhat of a delinquent, often getting into small money making schemes
+        and pranks. He soon learned that he had a unique power called a "stand" and that there were other
+        people like him in the town, including his nephew Jotaro, classmates Koichi and Okuyasu, and
+        the snarky famous mangaka Rohan.
+      </p>
+    </div>
   </section>
 
-  <section>
-    <main class="flex-grid-main">
-      <section class="col-main">
-        <article>
-          <img src="img/Josuke.png">
-          <h2><strong>Two Great Tastes that Taste Great Together</strong></h2>
-          <p>Local teen Josuke Higashikata investigates a string of murders and discovers
-            the killer. Previously Josuke was somewhat of a delinquent, often getting into
-            small money making schemes and pranks. He soon learned that he had a unique power
-            called a "stand" and that there were other people like him in the town, including
-            his nephew Jotaro, classmates Koichi and Okuyasu, and the snarky famous mangaka Rohan.
-          </p>
-        <br>
-  </section>
 
 <section>
   <div class="container">
@@ -96,11 +94,18 @@
 
     </section>
 
+    <section id="footer-img">
+       <div class="footer-text">
+         <h4>Interactions</h4>
+         <div class="buttons-footer">
+           <div class="button2">Instagram</div>
+           <div class="button3">Twitter</div>
+         </div>
+
+       </div>
+     </section>
+
   </main>
-
-
-
-
 </body>
 
 </html>
