--- a/04week/01Checkpoint/index.html
+++ b/04week/01Checkpoint/index.html
@@ -46,11 +46,9 @@
   <section class="flex-sct-1">
       <img src="img/Josuke.png" class="flex-sct-1-img">
     <div class="flex-sct-1-text">
-      <p>Local teen Josuke Higashikata investigates a string of murders and discovers the killer.
-        Previously Josuke was somewhat of a delinquent, often getting into small money making schemes
-        and pranks. He soon learned that he had a unique power called a "stand" and that there were other
-        people like him in the town, including his nephew Jotaro, classmates Koichi and Okuyasu, and
-        the snarky famous mangaka Rohan.
+      <p>LaCroix presents flavors based on the wildly popular manga and anime Jojo's Bizarre Adventure: Part 4.
+        The central plot is about a local teen named Josuke Higashikata and his crew of friends.
+        The flavors are based on the color palette and personality of each character.
       </p>
     </div>
   </section>
@@ -60,36 +58,20 @@
   <div class="container">
        <div class="jotaro">
          <h1>Jotaro</h1>
-           <p>Josuke met his nephew under strange circumstances... His father was having an
-             affair with a Japanese woman several decades younger than him, thus the 12 year age-gap
-             between Josuke and his nephew Jotaro. Jotaro is a stoic man who is studying to earn his
-             PhD in marine biology.
+           <p>Josuke wears mostly white and gold colors. This flavor is coconut and caramel.
          </p>
         </div>
 
-       <div class="Oku">
-         <h1>Okuyasu</h1>
-         <p>Okuyasu is a young delinquent boy with a tragic past. He lost his older brother
-           and lives with his physically incapacitated father in a dilapidated, abandoned house
-           in town. In spite of his difficult life, Oku is a deeply affectionate and trusting person.
-           He's Josuke's best friend and right-hand man.
-       </p>
-       </div>
-
        <div class="Koichi">
          <h1>Koichi</h1>
-         <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
-         Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
-         pork prosciutto short ribs ham hock burgdoggen flank chuck.
+         <p>Koichi dresses in a traditional blue school uniform. He has a neurotic personality so his flavor is watermellon lime.
        </p>
        </div>
 
        <div class="Rohan">
          <h1>Rohan</h1>
-         <p>Rohan is a local comic book artist and writer (a mangaka). He's sort of a shit
-           but he helps Josuke and the crew track down the killer and solve the mystery with
-           his intelligence and keen observational skills.
-        </p>
+         <p>Rohan dresses in shades of green. His flavor is lime.
+         </p>
        </div>
 
     </section>
