--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <a href="04Week/welcome/index.html">welcome</a>
     </section>
 
+    <section id="weekFive" class="projects">
+      <h1>Week Five</h1>
+      <a href="05Week/BootstrapResponsiveUtilityProject/index.html">BootstrapProject</a>
+    </section> 
+
   </main>
   <footer>2017</footer>
 </body>
