added index styling

--- a/05week/BootstrapResponsiveUtilityProject/index.html
+++ b/05week/BootstrapResponsiveUtilityProject/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bootstrap Grid</title>
+  <title>Tomorrow's Technology, Yesterday's Insights</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -22,9 +22,12 @@
     <section id="hero" class="container-fluid">
       <div class="row">
         <div class="col-md-8">
-          <section id="hero">
-
+          <img src ="img/bg.jpg">
+          <h1>Tomorrow's Technology, Yesterday's Insights
+          </h1>
+<p>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected--Like the Taylorist view...</p>
         </div>
+        <aside class = " "
         <div class="col-md-4">
           arffr
       </div>
