--- a/05week/BootstrapResponsiveUtilityProject/index.html
+++ b/05week/BootstrapResponsiveUtilityProject/index.html
@@ -22,16 +22,27 @@
     <section id="hero" class="container-fluid">
       <div class="row">
         <div class="col-md-8">
-          <img src ="img/bg.jpg">
+          <img src ="img/bg.jpg" class="img-responsive">
           <h1>Tomorrow's Technology, Yesterday's Insights
           </h1>
 <p>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected--Like the Taylorist view...</p>
         </div>
-        <aside class = " "
-        <div class="col-md-4">
-          arffr
+
+<!-- the button goes here -->
+
+        <div class="visible-md-4 hidden-sm hidden-xs">
+        <h3>TOP STORIES</h3>
+        <br>
+        <ul>
+          <li>Stanford Researches Make Artificial Skin That Senses Touch</li>
+          <li>3 New Ways to Wear Your Favorite Chambray Shirt</li>
+          <li>Where to Buy Your Next Rug</li>
+          <li>Chukkas that Offer Casual, Comofrtable Style</li>
+        </ul>
       </div>
     </section>
+
+
 
     <!-- This is the options section under the hero -->
 
