added new project

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
 
     <section id="weekFive" class="projects">
       <h1>Week Five</h1>
-      <a href="05Week/BootstrapResponsiveUtilityProject/index.html">BootstrapProject</a>
+      <a href="05Week/BootstrapGridProject/index.html">BootstrapGridProject</a>
     </section> 
+
+    <section id="weekFive" class="projects">
+      <h1>Week Five</h1>
+      <a href="05Week/BootstrapResponsiveUtilityProject/index.html">BootstrapProject</a>
+    </section>
 
   </main>
   <footer>2017</footer>
