--- a/05week/BootstrapGridProject/index.html
+++ b/05week/BootstrapGridProject/index.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- This is the CSS file -->
-    <link rel="stylesheet" href="css/style.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!--bootstrap css-->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  <!--Css file-->
+  <link rel="stylesheet" href="css/style.css">
+<title>Document</title>
 </head>
 
 <body>
-    <main>
+<main>
+  <!--Laptop-->
+  <section id="hero" class="container-fluid">
+<div class="row">
+<div class="col-md-12">
+<h1>Order Takeaway or Delivery Food</h1>
+<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+</div>
+</div>
+</section>
 
-        <!-- this is the hero section -->
-        <section id="hero" class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                    <img src="img/sub_header_home.jpg" class="img-responsive">
-                    <h1>Order Takeaway or Delivery Food
-          </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-
-                </div>
+<section id="options" class=“container-fluid>
+    <div class="row">
+        <div class="col-md-3 col-sm-6 location">
+            <img src="img/icon_home_1.svg">
+            <h4>Search By The Address</h4>
+            <p>Find all restaurants available in you zone</p>
+        </div>
 
 
-                
-        </section>
+        <div class="col-md-3 col-sm-6 house">
+            <img src="img/icon_home_2.svg">
+            <h4>Search By The Address</h4>
+            <p>Find all restaurants available in you zone</p>
+        </div>
 
 
+        <div class="col-md-3 col-sm-6 location">
+            <img src="img/icon_home_3.svg">
+            <h4>Search By The Address</h4>
+            <p>Find all restaurants available in you zone</p>
+        </div>
 
-        <!-- This is the options section under the hero -->
 
-    </main>
+        <div class="col-md-3 col-sm-6 truck">
+            <img src="img/icon_home_4.svg">
+            <h4>Search By The Address</h4>
+            <p>Find all restaurants available in you zone</p>
+        </div>
+    </div>
+</section>
 
-    <!-- These are the Javascript files -->
 
-    <!-- JQuery CDN script -->
+</main>
+<!-- JQuery CDN script, always before JS since it cascades -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Javascript file -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+</body>
+
+</html>
