--- a/05week/BootstrapResponsiveUtilityProject/index.html
+++ b/05week/BootstrapResponsiveUtilityProject/index.html
@@ -2,59 +2,77 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Tomorrow's Technology, Yesterday's Insights</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Tomorrow's Technology, Yesterday's Insights</title>
 
-  <!-- Bootstrap CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- This is the CSS file -->
-  <link rel="stylesheet" href="css/style.css">
+    <!-- This is the CSS file -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-  <main>
-
-    <!-- this is the hero section -->
-    <section id="hero" class="container-fluid">
-      <div class="row">
-        <div class="col-md-8">
-          <img src ="img/bg.jpg" class="img-responsive">
-          <h1>Tomorrow's Technology, Yesterday's Insights
+    <main>
+        <!-- this is the hero section -->
+        <section id="hero" class="container-fluid">
+            <div class="row">
+                <div class="col-md-8">
+                    <img src="img/bg.jpg" class="img-responsive">
+                    <h1>Tomorrow's Technology, Yesterday's Insights
           </h1>
-<p>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected--Like the Taylorist view...</p>
+                    <p>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected--Like the Taylorist view...</p>
+                    <button class="hvr-grow">Technology</button>
+                </div>
+
+                <!-- the button goes here -->
+
+                <div class="visible-md-4 hidden-sm hidden-xs">
+                    <h3>TOP STORIES</h3>
+                    <hr>
+                    <ul>
+                        <li><strong>Stanford Researches Make Artificial Skin That Senses Touch</strong></li>
+                        <li><strong>3 New Ways to Wear Your Favorite Chambray Shirt</strong></li>
+                        <li><strong>Where to Buy Your Next Rug</strong></li>
+                        <li><strong>Chukkas that Offer Casual, Comofrtable Style</strong></li>
+                    </ul>
+                </div>
+        </section>
+
+        <!-- This is the options section under the hero -->
+    </main>
+    <footer>
+    <div class="container-fluid">
+      <div class="row footer-box visible-xs-block">
+        <div class="col-xs-6 flex-column">
+          <h4 class="footer-h4">Useful Links</h4>
+          <a href="#">About</a>
+          <a href="#">Jobs</a>
+          <a href="#">Team</a>
+          <a href="#">Advertise</a>
+          <a href="#">Terms</a>
         </div>
-
-<!-- the button goes here -->
-
-        <div class="visible-md-4 hidden-sm hidden-xs">
-        <h3>TOP STORIES</h3>
-        <br>
-        <ul>
-          <li>Stanford Researches Make Artificial Skin That Senses Touch</li>
-          <li>3 New Ways to Wear Your Favorite Chambray Shirt</li>
-          <li>Where to Buy Your Next Rug</li>
-          <li>Chukkas that Offer Casual, Comofrtable Style</li>
-        </ul>
+        <div class="col-xs-6 flex-column">
+          <h4 class="footer-h4">Social Media</h4>
+          <a href="#">Facebook<i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
+          <a href="#">Instagram<i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+          <a href="#">Twitter<i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+        </div>
       </div>
-    </section>
+    </div>
+  </footer>
 
 
+    <!-- These are the Javascript files -->
 
-    <!-- This is the options section under the hero -->
+    <!-- JQuery CDN script -->
 
-  </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-  <!-- These are the Javascript files -->
-
-  <!-- JQuery CDN script -->
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </body>
 
