changed html back to normal

--- a/04week/welcome/index.html
+++ b/04week/welcome/index.html
@@ -2,59 +2,53 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lesson 07 > Media Queries > Welcome to Our Site!</title>
-  <!-- This is my CSS Reset File -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Lesson 07 > Media Queries > Welcome to Our Site!</title>
+    <!-- This is my CSS Reset File -->
     <link rel="stylesheet" href="css/css-reset.css">
-  <!-- This is my personal style -->
+    <!-- CSS style -->
     <link rel="stylesheet" href="css/style.css">
-
-
 </head>
+
 <body>
-  <main>
-    <section id="hero">
-      <div id ="hero-copy">
-<!-- this is the tile section -->
-        <h1>Welcome to our site
+    <main>
+        <section id="hero">
+            <div id="hero-copy">
+                <!-- this is the tile section -->
+                <h1>Welcome to our site
         </h1>
-        </div>
-      </section>
+            </div>
+        </section>
 
-      <section id="title">
-      </section>
+        <section id="title">
+        </section>
 
-<!-- divs that are different colored boxes-->
-<section>
- <div class="container">
- <div class="blue_rectangle">
-   <h1>Title</h1>
-     <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
-     Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
-     pork prosciutto short ribs ham hock burgdoggen flank chuck.
-   </p>
-  </div>
+        <!-- divs that are different colored boxes-->
+        <section>
+            <div class="container">
+                <div class="blue_rectangle">
+                    <h1>Title</h1>
+                    <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket. Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf pork prosciutto short ribs ham hock burgdoggen flank chuck.
+                    </p>
+                </div>
 
- <div class="orange_rectangle">
-   <h1>Title</h1>
-   <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
-   Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
-   pork prosciutto short ribs ham hock burgdoggen flank chuck.
- </p>
- </div>
+                <div class="orange_rectangle">
+                    <h1>Title</h1>
+                    <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket. Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf pork prosciutto short ribs ham hock burgdoggen flank chuck.
+                    </p>
+                </div>
 
- <div class="aqua_rectangle">
-   <h1>Title</h1>
-   <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket.
-   Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf
-   pork prosciutto short ribs ham hock burgdoggen flank chuck.
- </p>
- </div>
+                <div class="aqua_rectangle">
+                    <h1>Title</h1>
+                    <p>Bacon ipsum dolor amet pastrami cow jerky pig porchetta brisket. Drumstick corned beef strip steak meatball rump pork belly beef ribs meatloaf pork prosciutto short ribs ham hock burgdoggen flank chuck.
+                    </p>
+                </div>
 
 
     </main>
 
-  </body>
-  </html>
+</body>
+
+</html>
