--- a/05week/BootstrapGridProject/index.html
+++ b/05week/BootstrapGridProject/index.html
@@ -1,65 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--bootstrap css-->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  <!--Css file-->
-  <link rel="stylesheet" href="css/style.css">
-<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--bootstrap css-->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!--CSS file-->
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
 
 <body>
-<main>
-  <!--Laptop-->
-  <section id="hero" class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-<h1>Order Takeaway or Delivery Food</h1>
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
-</div>
-</div>
-</section>
+  <header>
+  <!-- This is where the bootstrap nav goes -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+      <a class="navbar-brand" href="#">Order Up!</a>
 
-<section id="options" class=“container-fluid>
-    <div class="row">
-        <div class="col-md-3 col-sm-6 location">
-            <img src="img/icon_home_1.svg">
-            <h4>Search By The Address</h4>
-            <p>Find all restaurants available in you zone</p>
-        </div>
-
-
-        <div class="col-md-3 col-sm-6 house">
-            <img src="img/icon_home_2.svg">
-            <h4>Search By The Address</h4>
-            <p>Find all restaurants available in you zone</p>
-        </div>
-
-
-        <div class="col-md-3 col-sm-6 location">
-            <img src="img/icon_home_3.svg">
-            <h4>Search By The Address</h4>
-            <p>Find all restaurants available in you zone</p>
-        </div>
-
-
-        <div class="col-md-3 col-sm-6 truck">
-            <img src="img/icon_home_4.svg">
-            <h4>Search By The Address</h4>
-            <p>Find all restaurants available in you zone</p>
-        </div>
     </div>
-</section>
+
+    <!-- Collect the nav links for toggling -->
+    <div class="collapse navbar-collapse" id="example-navbar-collapse">
+  <ul class="nav nav-pills pull-right">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Order Now</a></li>
+      </ul>
+  </div>
+    <!-- /.navbar-collapse -->
+
+  </div>
+  <!-- /.container -->
+</nav>
+
+  </header>
+
+    <main>
+        <!--Laptop-->
+        <section id="hero" class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Order Takeaway or Delivery Food</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="options" class=“container-fluid>
+            <div class="row">
+                <div class="col-md-3 col-sm-6 location">
+                    <img src="img/icon_home_1.svg">
+                    <h4>Search By The Address</h4>
+                    <p>Find all restaurants available in you zone</p>
+                </div>
 
 
-</main>
-<!-- JQuery CDN script, always before JS since it cascades -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Javascript file -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+                <div class="col-md-3 col-sm-6 house">
+                    <img src="img/icon_home_2.svg">
+                    <h4>Search By The Address</h4>
+                    <p>Find all restaurants available in you zone</p>
+                </div>
+
+
+                <div class="col-md-3 col-sm-6 location">
+                    <img src="img/icon_home_3.svg">
+                    <h4>Search By The Address</h4>
+                    <p>Find all restaurants available in you zone</p>
+                </div>
+
+
+                <div class="col-md-3 col-sm-6 truck">
+                    <img src="img/icon_home_4.svg">
+                    <h4>Search By The Address</h4>
+                    <p>Find all restaurants available in you zone</p>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+    <!-- JQuery CDN script, always before JS since it cascades -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Javascript file -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
