--- a/05week/BootstrapResponsiveUtilityProject/index.html
+++ b/05week/BootstrapResponsiveUtilityProject/index.html
@@ -9,13 +9,52 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- This is the CSS file -->
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
+
+  <header>
+  <!-- This is where the bootstrap nav goes -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+      <a class="navbar-brand" href="#">Tomorrow Tech</a>
+    </div>
+
+    <!-- Collect the nav links for toggling -->
+    <div class="collapse navbar-collapse" id="example-navbar-collapse">
+      <ul class="nav navbar-nav pull-right">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Weather</a>
+        </li>
+        <li>
+          <a href="#">Politics</a>
+        </li>
+        <li>
+          <a href="#">Sports</a>
+        </li>
+        <li>
+          <a href="#">Technology</a>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container -->
+</nav>
+  </header>
+
     <main>
         <!-- this is the hero section -->
         <section id="hero" class="container-fluid">
@@ -45,25 +84,25 @@
         <!-- This is the options section under the hero -->
     </main>
     <footer>
-    <div class="container-fluid">
-      <div class="row footer-box visible-xs-block">
-        <div class="col-xs-6 flex-column">
-          <h4 class="footer-h4">Useful Links</h4>
-          <a href="#">About</a>
-          <a href="#">Jobs</a>
-          <a href="#">Team</a>
-          <a href="#">Advertise</a>
-          <a href="#">Terms</a>
+        <div class="container-fluid">
+            <div class="row footer-box visible-xs-block">
+                <div class="col-xs-6 flex-column">
+                    <h4 class="footer-h4">Useful Links</h4>
+                    <a href="#">About</a>
+                    <a href="#">Jobs</a>
+                    <a href="#">Team</a>
+                    <a href="#">Advertise</a>
+                    <a href="#">Terms</a>
+                </div>
+                <div class="col-xs-6 flex-column">
+                    <h4 class="footer-h4">Social Media</h4>
+                    <a href="#">Facebook<i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
+                    <a href="#">Instagram<i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+                    <a href="#">Twitter<i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-6 flex-column">
-          <h4 class="footer-h4">Social Media</h4>
-          <a href="#">Facebook<i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
-          <a href="#">Instagram<i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
-          <a href="#">Twitter<i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
 
     <!-- These are the Javascript files -->
