--- a/index.html
+++ b/index.html
@@ -36,9 +36,16 @@
     <section id="weekFive" class="projects">
       <h1>Week Five</h1>
       <a href="05Week/BootstrapGridProject/index.html">BootstrapGridProject</a>
-  
+
       <a href="05Week/BootstrapResponsiveUtilityProject/index.html">BootstrapProject</a>
     </section>
+
+    <section id="weekSix" class="projects">
+    <h1>Week Six</h1>
+    <a href="06Week/index.html">Index</a>
+    </section>
+
+
 
   </main>
   <footer>2017</footer>
