--- a/06Week/index.html
+++ b/06Week/index.html
@@ -61,10 +61,20 @@
     <section id="hero" class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <img src="img/banner.jpg" class="img-responsive">
+              <img src="img/banner.jpg" class="img-responsive">
             </div>
-
+</div>
     </section>
+
+
+    <section class="container-fluid">
+        <div class="row f">
+            <div class="col-md-12 f">
+lkmlkm
+            </div>
+</div>
+    </section>
+
 
     <br />
 <div class="container">
@@ -112,8 +122,6 @@
     </div>
 </footer>
 
-
-  </main>
   <!-- JQuery CDN script, always before JS since it cascades -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Javascript file -->
