--- a/06Week/index.html
+++ b/06Week/index.html
@@ -12,120 +12,116 @@
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 
 
-<title>Hidden Place: Bjork Fan Club</title>
+    <title>Hidden Place: Bjork Fan Club</title>
 </head>
 
 <body>
-  <header>
-  <!-- This is where the bootstrap nav goes -->
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
+    <header>
+        <!-- This is where the bootstrap nav goes -->
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-      <a class="navbar-brand" href="#">Hidden Place: Bjork Fan Club</a>
-    </div>
+                    <a class="navbar-brand" href="#">Hidden Place: Bjork Fan Club</a>
+                </div>
 
-    <!-- Collect the nav links for toggling -->
-    <div class="collapse navbar-collapse" id="example-navbar-collapse">
-      <ul class="nav navbar-nav pull-right">
-        <li>
-          <a href="http://bjork.com/" target="_blank">Home</a>
-        </li>
-        <li>
-          <a href="http://bjork.com/" target="_blank">About</a>
-        </li>
-        <li>
-          <a href="https://en.wikipedia.org/wiki/Bj%C3%B6rk_discography" target="_blank">Albums</a>
-        </li>
-        <li>
-          <a href="http://www.bandsintown.com/Bj%C3%B6rk" target="_blank">Tour Dates</a>
-        </li>
-        <li>
-          <a href="http://gudmundsdottirbjork.blogspot.com/" target="_blank">Blog</a>
-        </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container -->
-  </nav>
-  </header>
-
-  <main>
-    <!-- this is the hero section -->
-    <section id="hero" class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-              <img src="img/banner.jpg" class="img-responsive">
+                <!-- Collect the nav links for toggling -->
+                <div class="collapse navbar-collapse" id="example-navbar-collapse">
+                    <ul class="nav navbar-nav pull-right">
+                        <li>
+                            <a href="http://bjork.com/" target="_blank">Home</a>
+                        </li>
+                        <li>
+                            <a href="http://bjork.com/" target="_blank">About</a>
+                        </li>
+                        <li>
+                            <a href="https://en.wikipedia.org/wiki/Bj%C3%B6rk_discography" target="_blank">Albums</a>
+                        </li>
+                        <li>
+                            <a href="http://www.bandsintown.com/Bj%C3%B6rk" target="_blank">Tour Dates</a>
+                        </li>
+                        <li>
+                            <a href="http://gudmundsdottirbjork.blogspot.com/" target="_blank">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
             </div>
-</div>
-    </section>
+            <!-- /.container -->
+        </nav>
+    </header>
 
-
-    <section class="container-fluid">
-        <div class="row f">
-            <div class="col-md-12 f">
-lkmlkm
+    <main>
+        <!-- this is the hero section -->
+        <section id="hero" class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="img/banner.jpg" class="img-responsive">
+                </div>
             </div>
-</div>
-    </section>
+        </section>
 
 
-    <br />
-<div class="container">
-  <div class="row">
-    <div class="col-md-offset-3 col-md-6 col-sm-12">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title"><i class="fa fa-envelope"></i> Sign up for our newsletter!</h3>
-        </div>
-        <div class="panel-body">
-    <form action="https://docs.google.com/forms/d/e/1FAIpQLSfxgVyY-iLpf8nwGckjmXRNwrl0M7L5FWIAQVHyKKOMe76Liw/formResponse"
-    method="POST" target="_self" onsubmit="">
-      <label for="entry_1752409128">What is your email?</label>
-      <input type="text" name="entry.1752409128"
-      value="" dir="auto" aria-label="What is your email?   " title="">
-      <input type="hidden" name="draftResponse" value="[,,&quot;2595155378541251292&quot;]
+        <section class="container-fluid">
+        <div>
+            <img src="img/bjork.jpg" alt="Bjork" width="500px" height="500px">
+            </div>
+        </section>
+
+
+        <br />
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-3 col-md-6 col-sm-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-envelope"></i> Sign up for our newsletter!</h3>
+                        </div>
+                        <div class="panel-body">
+                            <form action="https://docs.google.com/forms/d/e/1FAIpQLSfxgVyY-iLpf8nwGckjmXRNwrl0M7L5FWIAQVHyKKOMe76Liw/formResponse" method="POST" target="_self" onsubmit="">
+                                <label for="entry_1752409128">What is your email?</label>
+                                <input type="text" name="entry.1752409128" value="" dir="auto" aria-label="What is your email?   " title="">
+                                <input type="hidden" name="draftResponse" value="[,,&quot;2595155378541251292&quot;]
     ">
-      <input type="hidden" name="pageHistory" value="0">
-      <input type="hidden" name="fbzx" value="2595155378541251292">
-      <label for="emailReceipt" style="display:inline;"></label>
-      <input type="submit" name="submit" value="Submit">
-    </form>
-  </div>
-   </div>
- </div>
-</div>
-</div>
-    <!-- footer -->
-</main>
-<footer>
-    <div class="container-fluid">
-        <div class="row footer-box visible-xs-block">
-            <div class="col-xs-6 flex-column">
-                <h4 class="footer-h4">Useful Links</h4>
-                <a href="http://www.bandsintown.com/Bj%C3%B6rk" target="_blank">Tour Dates</a>
-                <a href="https://www.youtube.com/user/bjorkdotcom" target="_blank">YouTube</a>
-            </div>
-            <div class="col-xs-6 flex-column">
-                <h4 class="footer-h4">Social Media</h4>
-                <a href="#">Facebook<i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
-                <a href="#">Instagram<i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
-                <a href="#">Twitter<i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+                                    <input type="hidden" name="pageHistory" value="0">
+                                    <input type="hidden" name="fbzx" value="2595155378541251292">
+                                    <label for="emailReceipt" style="display:inline;"></label>
+                                    <input type="submit" name="submit" value="Submit">
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+        <!-- footer -->
+    </main>
+    <footer>
+        <div class="container-fluid">
+            <div class="row footer-box visible-xs-block">
+                <div class="col-xs-6 flex-column">
+                    <h4 class="footer-h4">Useful Links</h4>
+                    <a href="http://www.bandsintown.com/Bj%C3%B6rk" target="_blank">Tour Dates</a>
+                    <a href="https://www.youtube.com/user/bjorkdotcom" target="_blank">YouTube</a>
+                </div>
+                <div class="col-xs-6 flex-column">
+                    <h4 class="footer-h4">Social Media</h4>
+                    <a href="#">Facebook<i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
+                    <a href="#">Instagram<i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+                    <a href="#">Twitter<i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-  <!-- JQuery CDN script, always before JS since it cascades -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!-- Javascript file -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- JQuery CDN script, always before JS since it cascades -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Javascript file -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
