--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
     <a href="06Week/index.html">Index</a>
     </section>
 
-
+    <section id="weekSeven" class="projects">
+    <h1>Week Seven</h1>
+    <a href="07Week/checkpointpractice/index.html">Index</a>
+    </section>
 
   </main>
   <footer>2017</footer>
