added seven week

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     <section id="weekSix" class="projects">
     <h1>Week Six</h1>
-    <a href="06Week/index.html">Index</a>
+    <a href="06Week/index.html">Email Forms Page</a>
     </section>
 
     <section id="weekSeven" class="projects">
     <h1>Week Seven</h1>
-    <a href="07Week/checkpointpractice/index.html">Index</a>
+    <a href="07Week/checkpointpractice/index.html">checkpoint practice</a>
     </section>
 
   </main>
