--- a/07week/checkpointpractice/index.html
+++ b/07week/checkpointpractice/index.html
@@ -10,3 +10,65 @@
     <!--CSS file-->
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+
+<title>Foundry</title>
+<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+  <header>
+      <!-- This is where the bootstrap nav goes -->
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+          <div class="container-fluid">
+              <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+                  <a class="navbar-brand" href="#">Foundry</a>
+              </div>
+
+              <!-- Collect the nav links for toggling -->
+              <div class="collapse navbar-collapse" id="example-navbar-collapse">
+                  <ul class="nav navbar-nav pull-right">
+                      <li>
+                          <a href="#home" target="_blank">Home</a>
+                      </li>
+                      <li>
+                          <a href="#about" target="_blank">About Us</a>
+                      </li>
+                      <li>
+                          <a href="#testimonial" target="_blank">Testimonial</a>
+                      </li>
+                      <li>
+                          <a href="#wine" target="_blank">Wine Selection</a>
+                      </li>
+
+                  </ul>
+              </div>
+              <!-- /.navbar-collapse -->
+          </div>
+          <!-- /.container -->
+      </nav>
+  </header>
+
+  <main>
+    <!-- image and quote go here -->
+    <div class="col-lg-6 col-lg-offset-1 col-xs-12 pull-right">
+      <img id="wineman" src="img/wine16.jpg" class="img-responsive">
+    </div>
+    <div id="aboutText" class="col-xs-12 col-lg-4 col-lg-offset-1">
+      <p id="est"> &nbsp; EST.1968&nbsp;</p>
+      <h3>Combining over 60 years of hard work and shared family knowledge</h3>
+      <p> Lorem Ipsum Dolor Sit Amet.
+      </p>
+      <img id="signature" src="img/wine2.png" alt="Signature" class="img-responsive">
+    </div>
+    <main>
+</body>
+
+</html>
