added inedex changes

--- a/07week/checkpointpractice/index.html
+++ b/07week/checkpointpractice/index.html
@@ -57,12 +57,23 @@
   </header>
 
   <main>
+    <!-- Hero images goes here -->
+    <div class="jumbotron" id="hero">
+      <div class="container">
+
+      <img src="img/wine1.png" alt="Foundry Logo" class="img-responsive">
+
+      <img src="img/wine-bg.jpg" alt="vineyard" class="img-responsive">
+      <p id="quote"></p>
+
+
     <!-- image and quote go here -->
     <div class="col-lg-6 col-lg-offset-1 col-xs-12 pull-right">
       <img id="wineman" src="img/wine16.jpg" class="img-responsive">
     </div>
+
     <div id="aboutText" class="col-xs-12 col-lg-4 col-lg-offset-1">
-      <p id="est"> &nbsp; EST.1968&nbsp;</p>
+      <p id="est"> &nbsp;EST.1968&nbsp;</p>
       <h3>Combining over 60 years of hard work and shared family knowledge</h3>
       <p> Lorem Ipsum Dolor Sit Amet.
       </p>
