added index lines

--- a/07week/checkpointpractice/index.html
+++ b/07week/checkpointpractice/index.html
@@ -21,7 +21,7 @@
   <header>
       <!-- This is where the bootstrap nav goes -->
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-          <div class="container-fluid">
+        <!--  <div class="container-fluid"> -->
               <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
@@ -51,7 +51,7 @@
                   </ul>
               </div>
               <!-- /.navbar-collapse -->
-          </div>
+
           <!-- /.container -->
       </nav>
   </header>
@@ -59,27 +59,49 @@
   <main>
     <!-- Hero images goes here -->
     <div class="jumbotron" id="hero">
-      <div class="container">
-
+      <div class="container-fluid">
       <img src="img/wine1.png" alt="Foundry Logo" class="img-responsive">
-
-      <img src="img/wine-bg.jpg" alt="vineyard" class="img-responsive">
-      <p id="quote"></p>
-
-
+      <p id="quote">
+        “Without doubt, one of the most consistently
+        <br>
+        high-quality wineries in the Barossa region”</p>
+      <p id="author">David Halladay - Respected Wino</p>
+</div>
+</div>
     <!-- image and quote go here -->
     <div class="col-lg-6 col-lg-offset-1 col-xs-12 pull-right">
       <img id="wineman" src="img/wine16.jpg" class="img-responsive">
     </div>
+  </div>
 
     <div id="aboutText" class="col-xs-12 col-lg-4 col-lg-offset-1">
       <p id="est"> &nbsp;EST.1968&nbsp;</p>
       <h3>Combining over 60 years of hard work and shared family knowledge</h3>
-      <p> Lorem Ipsum Dolor Sit Amet.
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati maiores aliquam.
+        Ad minus vero fugiat consequuntur qui provident aliquid quod quidem cumque aliquam deleniti suum cuique.
       </p>
       <img id="signature" src="img/wine2.png" alt="Signature" class="img-responsive">
     </div>
-    <main>
+
+    <!-- 12 column image with quote on top -->
+        <div class="jumbotron" id="testimonial">
+          <div class="container-fluid">
+        <!--<img id="winegrapes" src="img/wine13.jpg" class="img-responsive">-->
+        <h2 id="winetestimony">
+          "We've been producing fine wine for over 65 years,
+          I think we know what we're talking about"
+        </h2>
+        <p id="description">Consectetur adipisicing elit. Distinctio quo pariatur consectetur,
+          maiores architecto animi? Cupiditate, consequuntur! A at dolor corporis similique,
+           ea enim sint quidem, recusandae nemo cumque.
+        </p>
+    </div>
+</div>
+<!-- 3 column wine images with three buttons underneath each image -->
+
+    <div>
+    </div>
+  </main>
 </body>
 
 </html>
