--- a/07week/checkpointpractice/index.html
+++ b/07week/checkpointpractice/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>Foundry</title>
+
     <!--bootstrap css-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!--CSS file-->
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 
-<title>Foundry</title>
-<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
 
 </head>
 
@@ -36,16 +36,19 @@
               <div class="collapse navbar-collapse" id="example-navbar-collapse">
                   <ul class="nav navbar-nav pull-right">
                       <li>
-                          <a href="#home" target="_blank">Home</a>
+                          <a href="#">Home</a>
                       </li>
+
                       <li>
-                          <a href="#about" target="_blank">About Us</a>
+                          <a href="#">About Us</a>
                       </li>
+
                       <li>
-                          <a href="#testimonial" target="_blank">Testimonial</a>
+                          <a href="#">Testimonial</a>
                       </li>
+
                       <li>
-                          <a href="#wine" target="_blank">Wine Selection</a>
+                          <a href="#">Wine Selection</a>
                       </li>
 
                   </ul>
@@ -59,7 +62,7 @@
   <main>
     <!-- Hero images goes here -->
     <div class="jumbotron" id="hero">
-      <div class="container-fluid">
+     <div class="container-fluid">
       <img src="img/wine1.png" alt="Foundry Logo" class="img-responsive">
       <p id="quote">
         “Without doubt, one of the most consistently
@@ -69,12 +72,12 @@
 </div>
 </div>
     <!-- image and quote go here -->
-    <div class="col-lg-6 col-lg-offset-1 col-xs-12 pull-right">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 pull-right">
       <img id="wineman" src="img/wine16.jpg" class="img-responsive">
     </div>
   </div>
 
-    <div id="aboutText" class="col-xs-12 col-lg-4 col-lg-offset-1">
+    <div id="about" class="col-xs-12 col-lg-4 col-lg-offset-1">
       <p id="est"> &nbsp;EST.1968&nbsp;</p>
       <h3>Combining over 60 years of hard work and shared family knowledge</h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati maiores aliquam.
@@ -84,19 +87,7 @@
     </div>
 
     <!-- 12 column image with quote on top -->
-        <div class="jumbotron" id="testimonial">
-          <div class="container-fluid">
-        <!--<img id="winegrapes" src="img/wine13.jpg" class="img-responsive">-->
-        <h2 id="winetestimony">
-          "We've been producing fine wine for over 65 years,
-          I think we know what we're talking about"
-        </h2>
-        <p id="description">Consectetur adipisicing elit. Distinctio quo pariatur consectetur,
-          maiores architecto animi? Cupiditate, consequuntur! A at dolor corporis similique,
-           ea enim sint quidem, recusandae nemo cumque.
-        </p>
-    </div>
-</div>
+
 <!-- 3 column wine images with three buttons underneath each image -->
 
     <div>
