--- a/06Week/index.html
+++ b/06Week/index.html
@@ -67,14 +67,23 @@
         </section>
 
 
-        <section class="container-fluid">
-        <div>
-            <img src="img/bjork.jpg" alt="Bjork" width="500px" height="500px">
-            </div>
-        </section>
+        <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6 col-sm-6 col-xs-6 pull-right">
+            <img src="img/bjork.jpg" alt="Bjork" class="img-responsive">
+          </div>
 
+      <div id="quote" class="col-md-6 col-sm-12 col-xs-12">
+        <h3>"I bought a laptop in 1999, and it was quite liberating,
+          <br>
+           because I could make a lot of my own decisions."</h3>
+        <p>--Bjork </p>
+      </div>
+</div>
+</div>
 
-        <br />
+<!-- This is the button for signing up -->
+
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-3 col-md-6 col-sm-12">
