--- a/06Week/index.html
+++ b/06Week/index.html
@@ -11,14 +11,16 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!--CSS file-->
     <link rel="stylesheet" href="css/style.css">
+    <!--fonts-->
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 </head>
 
 <body>
-  
+
     <header>
         <!-- This is where the bootstrap nav goes -->
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid nav-content">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -26,12 +28,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-                    <a class="navbar-brand" href="#">Hidden Place: Bjork Fan Club</a>
-                </div>
+
+            <a class="navbar-brand" href="#">Hidden Place: Bjork Fan-Site</a>
+              </div>
 
                 <!-- Collect the nav links for toggling -->
-                <div class="collapse navbar-collapse" id="example-navbar-collapse">
-                    <ul class="nav navbar-nav pull-right">
+                <div class="collapse navbar-collapse navbar-right" id="example-navbar-collapse">
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="http://bjork.com/" target="_blank">Home</a>
                         </li>
@@ -50,39 +53,20 @@
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
+
+                <!-- /.container -->
         </nav>
+
     </header>
 
     <main>
         <!-- this is the hero section -->
         <section id="hero" class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <img src="img/banner.jpg" class="img-responsive">
-                </div>
-            </div>
-        </section>
+              <div class="row">
+              </div>
 
 
-        <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-6 col-sm-6 col-xs-6 pull-right">
-            <img src="img/bjork.jpg" alt="Bjork" class="img-responsive">
-          </div>
-
-      <div id="quote" class="col-md-6 col-sm-12 col-xs-12">
-        <h3>"I bought a laptop in 1999, and it was quite liberating,
-          <br>
-           because I could make a lot of my own decisions."</h3>
-        <p>--Bjork </p>
-      </div>
-</div>
-</div>
-
-<!-- This is the button for signing up -->
-
+        <!-- This is the button for signing up -->
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-3 col-md-6 col-sm-12">
