--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
     <section id="weekFour" class="projects">
     <h1>Week Four</h1>
-    <a href="04Week/01Checkpoint/index.html">Checkpoint #1</a>
+    <a href="04week/01Checkpoint/index.html">Checkpoint #1</a>
     </section>
 
     <section id="weekFour" class="projects">
     <h1>Week Four</h1>
-    <a href="04Week/welcome/index.html">welcome</a>
+    <a href="04week/welcome/index.html">welcome</a>
     </section>
 
     <section id="weekFive" class="projects">
       <h1>Week Five</h1>
       <a href="05Week/BootstrapGridProject/index.html">BootstrapGridProject</a>
 
-      <a href="05Week/BootstrapResponsiveUtilityProject/index.html">BootstrapProject</a>
+      <a href="05week/BootstrapResponsiveUtilityProject/index.html">BootstrapProject</a>
     </section>
 
     <section id="weekSix" class="projects">
@@ -47,7 +47,8 @@
 
     <section id="weekSeven" class="projects">
     <h1>Week Seven</h1>
-    <a href="07Week/checkpointpractice/index.html">checkpoint practice</a>
+    <a href="07week/checkpointpractice/index.html">checkpoint practice</a>
+    <a href="07week/practice2/index.html">practice again</a>
     </section>
 
   </main>
