--- a/07week/practice2/index.html
+++ b/07week/practice2/index.html
@@ -58,23 +58,78 @@
         <!-- hero section col-lg-12 col-md-12 col-sm-12 col-xs-12 -->
         <section id="hero" class="container-fluid">
             <div class="row">
-              
-
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                    <img src="img/f-light.png" class="f-img">
+                    <p id="quote">
+                        &quot;Without doubt, one of the most consistently
+                        <br> high-quality wineries in the Barossa region&quot;
+                    </p>
+                    <h6>David Halladay - Respected Wino</h6>
+                </div>
+            </div>
         </section>
         <!-- sweeper man and established logo and signature half page each in md view col-lg-6 col-md-6 col-sm-12 col-xs-12 -->
         <section id="about-us" class="container-fluid">
             <div class="row">
+                <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 man-sweeping">
+                </div>
 
+                <div class="col-lg-6 col-md-pull-6 col-sm-12 col-xs-12 about-us-text">
+                    <h4>• EST. 1968 •</h4>
+                    <h2>Combining over 100 years of hard work and shared family knowledge</h2>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <img src="img/signature.png">
+                </div>
+            </div>
         </section>
         <!-- grapes and quote. col-lg-12 col-md-12 col-sm-12 col-xs-12 -->
         <section id="testimonials" class="container-fluid">
             <div class="row">
-
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h1>&quot;We've been producing fine wine for over 65 years, I think we know what we're talking about.&quot;
+      </h1>
+                    <h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                  laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                  beatae vitae dicta sunt explicabo.</h5>
+                </div>
+            </div>
+            </div>
         </section>
         <!-- 3 bottles of wine, 3 buttons, 2 offsets, col-sm-4 -->
         <section id="wines" class="container-fluid">
             <div class="row">
+                <div class="col-sm-4 wine-info">
+                    <img src="img/wine3.jpg">
+                    <hr>
+                    <h2>Foundry Shiraz</h2>
+                    <p id="small">
+                        &quot;Aged five years in solid, French Oak barrels sports notes of pepper and blackberry.&quot;
+                    </p>
+                    <button class="shop">Visit Shop</button>
 
+                </div>
+                <div class="col-sm-4 wine-info">
+                    <img src="img/wine6.jpg">
+                    <hr>
+                    <h2>Foundry Chardonnay</h2>
+                    <p id="small">
+                        &quot;A rich fruit palet with subtle Oak influence and a lingering dry, fresh finish.&quot;
+
+                    </p>
+                    <button class="shop">Visit Shop</button>
+
+                </div>
+                <div class="col-sm-4 wine-info">
+                    <img src="img/wine7.jpg">
+                    <hr>
+                    <h2>Foundry Cabernet</h2>
+                    <p id="small">
+                        &quot;Generous sweet blackcurrant and mulberry character with soft, velvety tannins.&quot;
+
+                    </p>
+                    <button class="shop">Visit Shop</button>
+
+                </div>
         </section>
     </main>
     <!-- JQuery CDN script, always before JS since it cascades -->
