added checkpoint to index

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <h1>Week Seven</h1>
     <a href="07week/checkpointpractice/index.html">checkpoint practice</a>
     <a href="07week/practice2/index.html">practice again</a>
+    <a href="07week/Checkpoint2/index.html">Checkpoint#2</a> 
     </section>
 
   </main>
