--- a/07week/Checkpoint2/index.html
+++ b/07week/Checkpoint2/index.html
@@ -12,7 +12,7 @@
     <!--CSS file-->
     <link rel="stylesheet" href="css/style.css">
     <!--fonts-->
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                             <a href="#about-us">About Us</a>
                         </li>
                         <li>
-                            <a href="#testimonial">Testimonial</a>
+                            <a href="#testimonials">Testimonials</a>
                         </li>
                         <li>
                             <a href="#wines">Wine Selection</a>
@@ -73,32 +73,66 @@
         <section id="about-us" class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 man-sweeping">
-
-
                 </div>
-            </div>
+
+                <div class="col-md-6 col-md-pull-6 about-us-text">
+                    <h4>• EST. 1968 •</h4>
+                    <h3>Combining over 60 years of hard work and shared family knowledge</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati maiores aliquam. Ad minus vero fugiat consequuntur qui provident aliquid quod quidem cumque aliquam deleniti suum cuique.</p>
+                    <img src="img/wine2.png">
+                </div>
             </div>
         </section>
 
         <!-- testimonial section. grape image and text -->
-        <section id="testimonial" class="container-fluid">
+        <section id="testimonials" class="container-fluid">
             <div class="row">
-                <div class=" ">
-
-
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 testimonials-text">
+                    <h1>&quot;We've been producing fine wine for over 65 years,
+                    <br>
+                    I think we know what we're talking about.&quot;
+                  </h1>
+                    <h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                  laudantium,
+                  <br>
+                  totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                  beatae vitae dicta sunt explicabo.</h5>
                 </div>
             </div>
             </div>
         </section>
+
         <!-- wine section. three wine bottles, three buttons -->
         <section id="wines" class="container-fluid">
             <div class="row">
-                <div class=" ">
-
-
+                <div class="col-sm-4 wine-info">
+                    <img src="img/wine3.jpg">
+                    <hr>
+                    <h2>Foundry Shiraz</h2>
+                    <p id="small">
+                        Aged five years in solid, French Oak barrels sports notes of pepper and blackberry.
+                    </p>
+                    <button class="shop">Visit Shop</button>
 
                 </div>
-            </div>
+                <div class="col-sm-4 wine-info">
+                    <img src="img/wine6.jpg">
+                    <hr>
+                    <h2>Foundry Chardonnay</h2>
+                    <p id="small">
+                        A rich fruit palet with subtle Oak influence and a lingering dry, fresh finish.
+                    </p>
+                    <button class="shop">Visit Shop</button>
+
+                </div>
+                <div class="col-sm-4 wine-info">
+                    <img src="img/wine7.jpg">
+                    <hr>
+                    <h2>Foundry Cabernet</h2>
+                    <p id="small">
+                        Generous sweet blackcurrant and mulberry character with soft, velvety tannins.</p>
+                    <button class="shop">Visit Shop</button>
+                </div>
             </div>
         </section>
     </main>
